--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fir",
   "version": "1.0.0",
   "description": "",
-  "main": "lights.js",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/sis0k0/fir/issues"
   },
-  "homepage": "https://github.com/sis0k0/fir#readme"
+  "homepage": "https://github.com/sis0k0/fir#readme",
+  "devDependencies": {
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
+  }
 }
